--- a/anki/anki.nuspec
+++ b/anki/anki.nuspec
@@ -18,7 +18,7 @@
     <projectSourceUrl>https://github.com/ankitects/anki</projectSourceUrl>
     <docsUrl>https://docs.ankiweb.net</docsUrl>
     <bugTrackerUrl>https://github.com/ankitects/anki/issues</bugTrackerUrl>
-    <tags>learning education flashcards efficient memory language-learning language remember spaced-repetition srs</tags>
+    <tags>learning education flashcards efficient memory language-learning language remember spaced-repetition srs cross-platform</tags>
     <summary>Powerful, intelligent flash cards. Remembering things just became much easier.</summary>
     <description>
 # Anki
