--- a/xxd/xxd.nuspec
+++ b/xxd/xxd.nuspec
@@ -15,7 +15,7 @@
     <docsUrl>https://linux.die.net/man/1/xxd</docsUrl>
     <bugTrackerUrl>https://github.com/vim/vim/issues</bugTrackerUrl>
     <tags>hexdump commandline ascii decode input patch binary file</tags>
-    <summary>xxd - make a hexdump or do the reverse</summary>
+    <summary>xxd - make a hexdump or do the reverse.</summary>
     <description>
 # xxd
 xxd creates a hex dump of a given file or standard input. It can also convert a hex dump back to its original binary form. Like [uuencode](https://linux.die.net/man/1/uuencode)(1) and [uudecode](https://linux.die.net/man/1/uudecode)(1) it allows the transmission of binary data in a 'mail-safe' ASCII representation, but has the advantage of decoding to standard output. Moreover, it can be used to perform binary file patching. 
