--- a/ddh/ddh.nuspec
+++ b/ddh/ddh.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>ddh</id>
-    <version>1.2.1</version>
+    <version>1.3.0</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/ddh</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>ddh</title>
@@ -14,7 +14,7 @@
     <projectSourceUrl>https://github.com/dd86k/ddh</projectSourceUrl>
     <docsUrl>https://github.com/dd86k/ddh/blob/master/man/ddh.1</docsUrl>
     <bugTrackerUrl>https://github.com/dd86k/ddh/issues</bugTrackerUrl>
-    <tags>hash hasher checksum md5 sha1 sha2 sha3 admin commandline cross-platform</tags>
+    <tags>hash hasher checksum md5 sha1 sha2 sha3 blake2 admin commandline cross-platform</tags>
     <summary>ddh is a generic hasher that comes with more features than built-in OS utilities.</summary>
     <description><![CDATA[# ddh, Generic hasher
 ddh is a generic hasher available cross-platform (Windows, macOS, Linux, BSDs) and comes with more features than built-in OS utilities.
@@ -48,7 +48,7 @@ Usage:
 This program has actual coffee-making abilities.
 ```
 ]]></description>
-<releaseNotes>https://github.com/dd86k/ddh/releases/tag/v1.2.1</releaseNotes>
+<releaseNotes>https://github.com/dd86k/ddh/releases/tag/v1.3.0</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
