--- a/memento.portable/memento.portable.nuspec
+++ b/memento.portable/memento.portable.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>memento.portable</id>
-    <version>0.5.1.2</version>
+    <version>0.5.2.2</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/memento.portable</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>Memento (Portable)</title>
@@ -17,7 +17,7 @@
     <bugTrackerUrl>https://github.com/ripose-jp/Memento/issues</bugTrackerUrl>
     <tags>learning education flashcards language-learning audio video mpv japanese spaced-repetition SRS anki yomichan</tags>
     <summary>Memento is a FOSS, mpv-based video player for studying Japanese.</summary>
-    <description><![CDATA[**NOTE:** The following text is an excerpt from [the official website](https://ripose-jp.github.io/Memento).
+    <description><![CDATA[﻿**NOTE:** The following text is an excerpt from [the official website](https://ripose-jp.github.io/Memento).
 
 # Memento
 A FOSS, mpv-based video player for studying Japanese.
@@ -46,7 +46,7 @@ Supports mpv configuration files such as input.conf for rebinding keys and mpv.c
 ### Streaming
 Supports streaming from many websites through [youtube-dl](https://community.chocolatey.org/packages/youtube-dl).
 ]]></description>
-    <releaseNotes>https://github.com/ripose-jp/Memento/releases/tag/v0.5.1-2-beta</releaseNotes>
+    <releaseNotes>https://github.com/ripose-jp/Memento/releases/tag/v0.5.2-2-beta</releaseNotes>
     <dependencies>
       <dependency id="vcredist2010" version="10.0.40219.325" />
     </dependencies>
