--- a/memento/memento.nuspec
+++ b/memento/memento.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>memento</id>
-    <version>0.5.1.2</version>
+    <version>0.5.2.2</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/memento</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>Memento</title>
@@ -17,7 +17,7 @@
     <bugTrackerUrl>https://github.com/ripose-jp/Memento/issues</bugTrackerUrl>
     <tags>learning education flashcards language-learning audio video mpv japanese spaced-repetition SRS anki yomichan</tags>
     <summary>Memento is a FOSS, mpv-based video player for studying Japanese.</summary>
-    <description><![CDATA[**NOTE:** The following text is an excerpt from [the official website](https://ripose-jp.github.io/Memento).
+    <description><![CDATA[﻿**NOTE:** The following text is an excerpt from [the official website](https://ripose-jp.github.io/Memento).
 
 # Memento
 A FOSS, mpv-based video player for studying Japanese.
@@ -56,12 +56,9 @@ Supports streaming from many websites through [youtube-dl](https://community.cho
   choco install memento --params "/InstallDir:D:\memento"
   ```
 ]]></description>
-    <releaseNotes>https://github.com/ripose-jp/Memento/releases/tag/v0.5.1-2-beta</releaseNotes>
+    <releaseNotes>https://github.com/ripose-jp/Memento/releases/tag/v0.5.2-2-beta</releaseNotes>
     <dependencies>
-      <dependency id="memento.install" version="[0.5.1.2]" />
+      <dependency id="memento.install" version="[0.5.2.2]" />
     </dependencies>
   </metadata>
-  <files>
-    <file src="tools\**" target="tools" />
-  </files>
 </package>
