--- a/memento/memento.nuspec
+++ b/memento/memento.nuspec
@@ -61,4 +61,6 @@ Supports streaming from many websites through [youtube-dl](https://community.cho
       <dependency id="memento.install" version="[0.5.2.2]" />
     </dependencies>
   </metadata>
+  <files>
+  </files>
 </package>
