--- a/file/file.nuspec
+++ b/file/file.nuspec
@@ -2,20 +2,22 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>file</id>
-    <version>5.38</version>
+    <version>5.41</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/file</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>file</title>
     <authors>Ian F. Darwin,others</authors>
-    <projectUrl>https://github.com/julian-r/file-windows</projectUrl>
-    <copyright>Copyright (c) 2017 Julian David Rath</copyright>
-    <licenseUrl>https://github.com/julian-r/file-windows/blob/master/LICENSE</licenseUrl>
+    <projectUrl>http://www.darwinsys.com/file/</projectUrl>
+    <iconUrl>https://rawcdn.githack.com/rkitover/file-windows/89e4b76cc0beb2fe7db0911974b1b632f035ddbf/data/filelogo.jpg</iconUrl>
+    <copyright>1986-1999 Ian F. Darwin</copyright>
+    <licenseUrl>https://raw.githubusercontent.com/file/file/FILE5_41/COPYING</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <projectSourceUrl>https://github.com/julian-r/file-windows</projectSourceUrl>
-    <bugTrackerUrl>https://github.com/julian-r/file-windows/issues</bugTrackerUrl>
-    <tags>file type guess utility unix linux commandline</tags>
-    <summary>The file is a commandline tool that tells you in words what kind of data a file contains.</summary>
-    <description>  
+    <projectSourceUrl>https://github.com/file/file</projectSourceUrl>
+    <bugTrackerUrl>https://bugs.astron.com/</bugTrackerUrl>
+    <tags>file type filetype guess guesser utility unix linux commandline command-line magic libmagic</tags>
+    <summary>File is a command-line tool that tells you in words what kind of data a file contains.</summary>
+    <description><![CDATA[
+
 # file
 The file command is "a file type guesser", that is, a command-line tool that tells you in words what kind of data a file contains. Unlike most GUI systems, command-line UNIX systems - with this program leading the charge - don't rely on filename extentions to tell you the type of a file, but look at the file's actual contents. This is, of course, more reliable, but requires a bit of I/O.
 
@@ -38,22 +40,23 @@ Determine type of FILEs.
       --help                 display this help and exit
   -v, --version              output version information and exit
   -m, --magic-file LIST      use LIST as a colon-separated list of magic
-                                number files
+                               number files
   -z, --uncompress           try to look inside compressed files
   -Z, --uncompress-noreport  only print the contents of compressed files
   -b, --brief                do not prepend filenames to output lines
   -c, --checking-printout    print the parsed form of the magic file, use in
-                                conjunction with -m to debug a new magic file
-                                before installing it
+                               conjunction with -m to debug a new magic file
+                               before installing it
   -e, --exclude TEST         exclude TEST from the list of test to be
-                                performed for file. Valid tests are:
-                                apptype, ascii, cdf, compress, csv, elf,
-                                encoding, soft, tar, json, text,
-                                tokens
+                               performed for file. Valid tests are:
+                               apptype, ascii, cdf, compress, csv, elf,
+                               encoding, soft, tar, json, text,
+                               tokens
+      --exclude-quiet TEST         like exclude, but ignore unknown tests
   -f, --files-from FILE      read the filenames to be examined from FILE
   -F, --separator STRING     use string as separator instead of `:'
   -i, --mime                 output MIME type strings (--mime-type and
-                                --mime-encoding)
+                               --mime-encoding)
       --apple                output the Apple CREATOR/TYPE
       --extension            output a slash-separated list of extensions
       --mime-type            output the MIME type
@@ -64,22 +67,40 @@ Determine type of FILEs.
   -N, --no-pad               do not pad output
   -0, --print0               terminate filenames with ASCII NUL
   -P, --parameter            set file engine parameter limits
-                                indir        15 recursion limit for indirection
-                                name         30 use limit for name/use magic
-                                elf_notes   256 max ELF notes processed
-                                elf_phnum   128 max ELF prog sections processed
-                                elf_shnum 32768 max ELF sections processed
+                                   bytes 1048576 max bytes to look inside file
+                               elf_notes     256 max ELF notes processed
+                               elf_phnum    2048 max ELF prog sections processed
+                               elf_shnum   32768 max ELF sections processed
+                                encoding   65536 max bytes to scan for encoding
+                                   indir      50 recursion limit for indirection
+                                    name      50 use limit for name/use magic
+                                   regex    8192 length limit for REGEX searches
   -r, --raw                  don't translate unprintable chars to \ooo
   -s, --special-files        treat special (block/char devices) files as
-                              ordinary ones
+                             ordinary ones
   -S, --no-sandbox           disable system call sandboxing
   -C, --compile              compile file specified by -m
   -d, --debug                print debugging messages
 
 Report bugs to https://bugs.astron.com/
 ```
-    </description>
-    <releaseNotes>https://github.com/julian-r/file-windows/releases/tag/v5.38</releaseNotes>
+]]></description>
+    <releaseNotes>
+* Avinash Sonawane: Fix tzname detection
+* Fix relationship tests with "search" magic, don't short circuit
+* Fix memory leak in compile mode
+* PR/272: kiefermat: Only set returnval = 1 when we printed something
+* PR/270: Don't translate unprintable characters in %s magic formats
+* PR/269: Avoid undefined behavior with clang (adding offset to NULL)
+* Add a new flag (f) that requires that the match is a full word,
+* Add varint types (unused)
+* PR/256: mutableVoid: If the file is less than 3 bytes, use the file
+* PR/259: aleksandr.v.novichkov: mime printing through indirect magic
+* count the total bytes found not the total byte positions
+    </releaseNotes>
+    <dependencies>
+      <dependency id="vcredist140" />
+    </dependencies>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
