--- a/spicetify-cli/spicetify-cli.nuspec
+++ b/spicetify-cli/spicetify-cli.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>spicetify-cli</id>
-    <version>2.8.3</version>
+    <version>2.8.4</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/spicetify-cli</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>Spicetify</title>
@@ -35,8 +35,12 @@ A command-line tool to customize Spotify client. Supports Windows, MacOS and Lin
 * [Extensions](https://spicetify.app/docs/getting-started/extensions)
 * [Custom Apps](https://spicetify.app/docs/getting-started/custom-apps)
 * [FAQ](https://spicetify.app/docs/faq)
+
+## Screenshot
+
+![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/spicetify-cli/preview.png)
 ]]></description>
-<releaseNotes>https://github.com/khanhas/spicetify-cli/releases/tag/v2.8.3</releaseNotes>
+<releaseNotes>https://github.com/khanhas/spicetify-cli/releases/tag/v2.8.4</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
