--- a/reeeplayer/reeeplayer.nuspec
+++ b/reeeplayer/reeeplayer.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>reeeplayer</id>
-    <version>0.1</version>
+    <version>0.2</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/reeeplayer</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>ReeePlayer</title>
@@ -16,17 +16,16 @@
     <bugTrackerUrl>https://github.com/FilippVolodin/ReeePlayer/issues</bugTrackerUrl>
     <tags>learning education flashcards language-learning audio video vlc spaced-repetition SRS anki</tags>
     <summary>The ReeePlayer application is designed for spaced repetition of fragments (clips) of video and audio files with similar principle as in Anki.</summary>
-    <description>
-# ReeePlayer
+    <description><![CDATA[# ReeePlayer
 The ReeePlayer application is designed for spaced repetition of fragments (clips) of video and audio files with similar principle as in Anki.
 
 ![](https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/reeeplayer/watching.png)
 
 For more information see [README.MD (English)](https://github.com/FilippVolodin/ReeePlayer/blob/main/README.md) or [README.MD (Russian)](https://github.com/FilippVolodin/ReeePlayer/blob/main/doc/README.ru.md).
-    </description>
-    <releaseNotes>https://github.com/FilippVolodin/ReeePlayer/releases/tag/v0.1</releaseNotes>
+]]></description>
+    <releaseNotes>https://github.com/FilippVolodin/ReeePlayer/releases/tag/v0.2</releaseNotes>
     <dependencies>
-      <dependency id="reeeplayer.portable" version="[0.1]" />
+      <dependency id="reeeplayer.portable" version="[0.2]" />
     </dependencies>
   </metadata>
   <files>
