--- a/deadbeef/deadbeef.nuspec
+++ b/deadbeef/deadbeef.nuspec
@@ -17,8 +17,7 @@
     <bugTrackerUrl>https://github.com/DeaDBeeF-Player/deadbeef/issues</bugTrackerUrl>
     <tags>audio player media flac mp3 gtk</tags>
     <summary>♫ DeaDBeeF (as in 0xDEADBEEF) is a modular audio player.</summary>
-    <description>
-**NOTE:** The following text is for the most part an excerpt from [the official website](https://deadbeef.sourceforge.io).
+    <description><![CDATA[**NOTE:** The following text is for the most part an excerpt from [the official website](https://deadbeef.sourceforge.io).
 
 # DeaDBeeF
 DeaDBeeF (as in [0xDEADBEEF](http://en.wikipedia.org/wiki/Hexspeak)) is a modular multiple-platform audio player for desktop operating systems.
@@ -51,7 +50,7 @@ The screenshot above demonstrates a highly customized DeaDBeeF, running on Linux
   ```
   choco install deadbeef --params "/AssociateAudioFiles /CreateDesktopIcon"
   ```
-    </description>
+]]></description>
     <releaseNotes>https://github.com/DeaDBeeF-Player/deadbeef/blob/1.8.8/ChangeLog</releaseNotes>
     <dependencies>
       <dependency id="deadbeef.install" version="[1.8.8]" />
