fix ${ push error

--- a/analyzer2go/analyzer2go.nuspec
+++ b/analyzer2go/analyzer2go.nuspec
@@ -29,7 +29,7 @@ Analyzer2Go is an application that turns your development board into a logic ana
 ## Installation Parameters
 * `/InstallDir:` - where to install the binaries
   - Default value:
-    - `"${env:ProgramFiles(x86)}\Sysprogs\Analyzer2Go"` on 64-bit Windows
+    - `"$env:ProgramFiles(x86)\Sysprogs\Analyzer2Go"` on 64-bit Windows
     - `"$env:ProgramFiles\Sysprogs\Analyzer2Go"` on 32-bit Windows
 
 ### Examples
