--- a/amp-winoff.install/amp-winoff.install.nuspec
+++ b/amp-winoff.install/amp-winoff.install.nuspec
@@ -39,7 +39,7 @@ AMP WinOFF is an utility for scheduling the shutdown of Windows computers, with 
 ## Installation Parameters
 * `/InstallationPath:` - where to install the binaries
   - Default value:
-    - `"${env:ProgramFiles(x86)}\AMP WinOFF"` on 64-bit Windows
+    - `"$env:ProgramFiles(x86)\AMP WinOFF"` on 64-bit Windows
     - `"$env:ProgramFiles\AMP WinOFF"` on 32-bit Windows
 
 ### Examples
