--- a/visualkernel/visualkernel.nuspec
+++ b/visualkernel/visualkernel.nuspec
@@ -31,7 +31,7 @@ VisualKernel integrates Linux kernel debugging into Visual Studio.
 ## Installation Parameters
 * `/InstallDir:` - where to install the binaries
   - Default value:
-    - `"${env:ProgramFiles(x86)}\Sysprogs\VisualKernel"` on 64-bit Windows
+    - `"$env:ProgramFiles(x86)\Sysprogs\VisualKernel"` on 64-bit Windows
     - `"$env:ProgramFiles\Sysprogs\VisualKernel"` on 32-bit Windows
 
 ### Examples
