--- a/xh/xh.nuspec
+++ b/xh/xh.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>xh</id>
-    <version>0.14.1</version>
+    <version>0.15.0</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/xh</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>xh</title>
@@ -16,8 +16,7 @@
     <bugTrackerUrl>https://github.com/ducaale/xh/issues</bugTrackerUrl>
     <tags>http request send fast cross-platform commandline</tags>
     <summary>Friendly and fast tool for sending HTTP requests.</summary>
-    <description>  
-# xh
+    <description><![CDATA[# xh
 `xh` is a friendly and fast tool for sending HTTP requests. It reimplements as much as possible of HTTPie's excellent design, with a focus on improved performance.
 
 ## Examples
@@ -28,7 +27,7 @@ xh httpbin.org/json
 # Send a POST request with body {"name": "john", "age": 27}
 xh httpbin.org/post name=john age:=27
 
-# Send a GET request with querystring id=5&amp;sort=true
+# Send a GET request with querystring id=5&sort=true
 xh get httpbin.org/json id==5 sort==true
 
 # Send a GET request and include a header named x-api-key with value 12345
@@ -45,8 +44,8 @@ xh httpbin.org/get user-agent:foobar
 ```
 
 ### For more information about xh see [README.md](https://github.com/ducaale/xh/blob/master/README.md).
-    </description>
-    <releaseNotes>https://github.com/ducaale/xh/releases/tag/v0.14.1</releaseNotes>
+]]></description>
+    <releaseNotes>https://github.com/ducaale/xh/releases/tag/v0.15.0</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
