--- a/xh/xh.nuspec
+++ b/xh/xh.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>xh</id>
-    <version>0.15.0</version>
+    <version>0.15.0.20220317</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/xh</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>xh</title>
