manga-py icon added

--- a/manga-py/manga-py.nuspec
+++ b/manga-py/manga-py.nuspec
@@ -8,6 +8,7 @@
     <title>manga-py</title>
     <authors>yuru-yuri</authors>
     <projectUrl>https://github.com/manga-py/manga-py</projectUrl>
+    <iconUrl>https://cdn.jsdelivr.net/gh/jakublevy/chocopkgs/icons/manga-py.png</iconUrl>
     <copyright>Copyright (c) 2017 yuru-yuri</copyright>
     <licenseUrl>https://github.com/manga-py/manga-py/blob/stable_1.x/LICENSE</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -40,7 +41,7 @@ manga-py --skip-volumes 3 "http://manga-url-here/manga-name"
 # skip 3 volumes and download 2 volumes
 manga-py --skip-volumes 3 --max-volumes 2 "http://manga-url-here/manga-name"
 
-# reverse volumes downloading (24 -> 1)
+# reverse volumes downloading (24 → 1)
 manga-py --reverse-downloading "http://manga-url-here/manga-name"
 
 # disable progressbar
