--- a/sacad/sacad.nuspec
+++ b/sacad/sacad.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>sacad</id>
-    <version>2.5.0</version>
+    <version>2.5.1</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/sacad</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>SACAD</title>
@@ -16,8 +16,7 @@
     <bugTrackerUrl>https://github.com/desbma/sacad/issues</bugTrackerUrl>
     <tags>album cover-art download downloader cross-platform commandline</tags>
     <summary>SACAD is a multi platform command line tool to download album covers without manual intervention.</summary>
-    <description>
-# SACAD
+    <description><![CDATA[# SACAD
 SACAD is a multi platform command line tool to download album covers without manual intervention, ideal for integration in scripts, audio players, etc.
 
 ## Features
@@ -52,8 +51,8 @@ SACAD is designed to be robust and be executed in batch of thousands of queries:
 Two tools are provided: `sacad` to search and download one cover, and `sacad_r` to scan a music library and download all missing covers.
 
 Run `sacad -h` / `sacad_r -h` to get full command line reference.
-    </description>
-<releaseNotes>https://github.com/desbma/sacad/releases/tag/2.5.0</releaseNotes>
+]]></description>
+<releaseNotes>https://github.com/desbma/sacad/releases/tag/2.5.1</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
