AU: 1 updated - ddh [skip ci]

--- a/ddh/ddh.nuspec
+++ b/ddh/ddh.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>ddh</id>
-    <version>1.3.0</version>
+    <version>1.4.0</version>
     <packageSourceUrl>https://github.com/jakublevy/chocopkgs/tree/master/ddh</packageSourceUrl>
     <owners>Jakub Levý</owners>
     <title>ddh</title>
@@ -22,33 +22,39 @@ ddh is a generic hasher available cross-platform (Windows, macOS, Linux, BSDs) a
 ## Usage
 ```
 $ ddh -h
-Usage:
-  ddh page
-  ddh alias [options...] [{file|-}...]
+Usage: ddh command [options...] [files...] [-]
 
--F, --file        Input mode: Regular file (default)
--b, --binary      File: Set binary mode (default)
--t, --text        File: Set text mode
--M, --mmfile      Input mode: Memory-map file
--a, --arg         Input mode: Command-line argument text, as UTF-8
--c, --check       Check hashes list in this file
--C, --chunk       Set buffer size, affects file/mmfile/stdin (default=64K)
-    --shallow     Depth: Same directory (default)
--s, --depth       Depth: Deepest directories first
-    --breadth     Depth: Sub directories first
-    --follow      Links: Follow symbolic links (default)
-    --nofollow    Links: Do not follow symbolic links
-    --tag         Create or read BSD-style hashes
-    --sri         Create or read SRI-style hashes
-    --version     Show version page and quit
-    --ver         Show version and quit
-    --license     Show license page and quit
+Commands
+list      List all supported hashes and checksums.
+help      This help page and exit.
+ver       Only show version number and exit.
+version   Show version page and exit.
+
+Options
+--                Stop processing options.
+-                 Input mode: Standard input (stdin).
+-F, --file        Input mode: Regular file (default).
+-b, --binary      File: Set binary mode (default).
+-t, --text        File: Set text mode.
+-M, --mmfile      Input mode: Memory-map file.
+-a, --arg         Input mode: Command-line argument is text data (UTF-8).
+-c, --check       Check hashes list in this file.
+-C, --chunk       Set buffer size, affects file/mmfile/stdin (default=64K).
+    --shallow     Depth: Same directory (default).
+-s, --depth       Depth: Deepest directories first.
+    --breadth     Depth: Sub directories first.
+    --follow      Links: Follow symbolic links (default).
+    --nofollow    Links: Do not follow symbolic links.
+    --tag         Create or read BSD-style hashes.
+    --sri         Create or read SRI-style hashes.
+    --version     Show version page and quit.
+    --ver         Show version and quit.
+    --license     Show license page and quit.
 -h, --help        This help information.
-
 This program has actual coffee-making abilities.
 ```
 ]]></description>
-<releaseNotes>https://github.com/dd86k/ddh/releases/tag/v1.3.0</releaseNotes>
+<releaseNotes>https://github.com/dd86k/ddh/releases/tag/v1.4.0</releaseNotes>
 </metadata>
   <files>
     <file src="tools\**" target="tools" />
